ingress/dev/ingress-dev.yaml
# ingress/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress-dev
  namespace: petclinic-dev
  labels:
    name: petclinic-ingress-dev
spec:
  ingressClassName: nginx  
  rules:
    - host: petclinic-dev.22127210.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
